# tap

./: .gitignore  CMakeLists.txt  README.md
imported/: bag.cpp  bag.hpp  graphs.cpp  graphs.hpp  search.cpp
include/: Bag.h  TimeMeasurementUtil.h  a_star.h  element.h  forward_def.h  group.h  p_search.h  partition_refinement.h
src/: a_star.cpp  dfs_bfs.cpp  element.cpp  group.cpp  p_search.cpp  partition_refinement.cpp
test/: testAStar.cpp  testCompareDfsBfs.cpp  testDfsBfs.cpp  testMyGraph.cpp  testPartitionRefinement.cpp  testPennantTree.cpp
unused/: my_graph.cpp  setup_openmp.cpp
utils/: TimeMeasurementUtil.cpp
